# uhd_USRP

./: README.md  decoded_output.csv
capdata_uhd/: CMakeLists.txt
cppuhd_snr/: CMakeLists.txt
cppuhd_snr/include/: barker.hpp  utils.hpp
cppuhd_snr/src/: rx_snr.cpp  snr_calibrator.cpp  tx_barker.cpp  txrx_barker_snr.cpp  utils.hpp
grc_flowgraph/: BPSK.grc  Singlecarrierphy.py  singlecarrierphyimp.grc  upsampler.grc
pysimsnrcalc/: snr_sim_calc.py
rxprocessing_oot/: Readme.md
rxprocessing_oot/gr-rxprocessing_ecological/: .gitignore  CMakeLists.txt  MANIFEST.md
rxprocessing_oot/gr-rxprocessing_ecological/.conda/: README.md
rxprocessing_oot/gr-rxprocessing_ecological/.conda/recipe/: meta.yaml
rxprocessing_oot/gr-rxprocessing_ecological/apps/: CMakeLists.txt
rxprocessing_oot/gr-rxprocessing_ecological/cmake/Modules/: gnuradio-rxprocessing_ecologicalConfig.cmake
rxprocessing_oot/gr-rxprocessing_ecological/docs/: CMakeLists.txt  README.rxprocessing_ecological
rxprocessing_oot/gr-rxprocessing_ecological/docs/doxygen/: CMakeLists.txt  Doxyfile.in
rxprocessing_oot/gr-rxprocessing_ecological/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
rxprocessing_oot/gr-rxprocessing_ecological/docs/doxygen/other/: group_defs.dox  main_page.dox
rxprocessing_oot/gr-rxprocessing_ecological/grc/: CMakeLists.txt  rxprocessing_ecological_matchedFilter.block.yml  rxprocessing_ecological_pktdetect.block.yml  rxprocessing_ecological_rrcpulseshaping.block.yml
rxprocessing_oot/gr-rxprocessing_ecological/include/gnuradio/rxprocessing_ecological/: CMakeLists.txt  api.h  rrcpulseshaping.h
rxprocessing_oot/gr-rxprocessing_ecological/lib/: CMakeLists.txt  rrcpulseshaping_impl.cc  rrcpulseshaping_impl.h
rxprocessing_oot/gr-rxprocessing_ecological/python/rxprocessing_ecological/: CMakeLists.txt  __init__.py  matchedFilter.py  pktdetect.py
rxprocessing_oot/gr-rxprocessing_ecological/python/rxprocessing_ecological/bindings/: CMakeLists.txt  python_bindings.cc  rrcpulseshaping_python.cc
rxprocessing_oot/gr-rxprocessing_ecological/python/rxprocessing_ecological/bindings/docstrings/: rrcpulseshaping_pydoc_template.h
rxwaveplotter/: CMakeLists.txt  main.cpp
snr_calibrator_project/: CMakeLists.txt  plot_waveform_qt.cpp  snr_calibrator.cpp  waveform_plotter.cpp  waveform_plotter.h
snr_sim/: SignalSimulator.cpp  graph.py  rx_iq.csv  signalsim
testuhd/: CMakeLists.txt  testuhd_ex1.cpp
